Fix right-to-left advances from canvas measureText

This fixes advances from TextMetrics for Right-to-left text. Currently
it's returning values that are correct when there is just one text_run
(or word), but the values are in the reverse order within each text_run
for when there's more than one run.

Bug: 864193
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I6459f3800a33aedf46692b3931fb5778ee3ce825
Reviewed-on: https://chromium-review.googlesource.com/1144629
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Reviewed-by: Justin Novosad <junov@chromium.org>
Commit-Queue: David Quiroz Marin <davidqu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577707}
Former-commit-id: 67493d01633025e7436230039e57db20218209b9